# tic-tac-ai

./: Cargo.toml  Readme.md  test.json
src/: cli.rs  commands.rs  main.rs
src/commands/: run.rs  train.rs
src/models/: data.rs  model.rs
