[package]
name = "tic-tac-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = "2.2.2"
csv = "1.3.0"
env_logger = "0.11.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
smartcore = { version = "0.3.2", features = ["serde"] }
